<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quizapp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="50sp"
        android:textColor="@color/orange" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_name"
        android:textColor="@color/orange"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="@color/orange"
        android:text="@string/stat"
        android:textSize="20dp" />

    <Button
        android:id="@+id/About"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/oblue"
        android:text="@string/abot"
        android:textSize="20dp" />

</RelativeLayout>