<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/backg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Hello"
        android:textColor="@color/teal_700"
        android:textSize="25sp"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/nameCatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="50dp"
        android:text="@string/Hello"
        android:textColor="@color/teal_700"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="530dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/oblue"
        android:text="@string/quit"
        android:textSize="20dp" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="480dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/orange"
        android:text="@string/next_question"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/QuestionGiven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="125dp"
        android:text="Question"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="610dp"
        android:text="@string/your_score"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="370dp"
        android:layout_marginTop="610dp"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/groupRadio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="20dp" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Option1"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Option2"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Option3"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Option4"
            android:textSize="20dp" />
    </RadioGroup>


</RelativeLayout>